# plugin_DocuGen

./: .gitignore  CMakeLists.txt  LICENSE  ug4CompletionList.txt
html/: AMGPreconditioner.html  ApproximationSpace2d.html  AssembledLinearOperator.html  AssembledOperator.html  BGSPreconditioner.html  Base.html  BiCGStabSolver.html  CGSolver.html  Cake.html  ConstUserMatrix1d.html  ConstUserMatrix2d.html  ConstUserMatrix3d.html  ConstUserMatrixProvider1d.html  ConstUserMatrixProvider2d.html  ConstUserMatrixProvider3d.html  ConstUserNumber1d.html  ConstUserNumber2d.html  ConstUserNumber3d.html  ConstUserNumberProvider1d.html  ConstUserNumberProvider2d.html  ConstUserNumberProvider3d.html  ConstUserVector1d.html  ConstUserVector2d.html  ConstUserVector3d.html  ConstUserVectorProvider1d.html  ConstUserVectorProvider2d.html  ConstUserVectorProvider3d.html  Derived.html  DirichletBND2d.html  Domain2d.html  DomainDiscretization.html  ElderUserFunction2d.html  FV1ConvectionDiffusionElemDisc2d.html  FV1DensityDrivenFlowElemDisc2d.html  FV1NeumannBoundaryElemDisc2d.html  FunctionGroup.html  FunctionPattern.html  GSPreconditioner.html  GeometricMultiGridPreconditioner2d.html  GlobalMultiGridRefiner.html  (+70 more)
src/: class_hierarchy_provider.cpp  class_hierarchy_provider.h  clickEventHandler.txt  clickEventHandler.txt.h  completion_list_generation.cpp  cpp_generator.cpp  cpp_generator.h  html_generation.cpp  html_generation.h  main.cpp  ug_docu_class_description.cpp  ug_docu_class_description.h  ugdocu.cpp  ugdocu.css  ugdocu.css.h  ugdocu_misc.cpp  ugdocu_misc.h
